--- a/Form.html
+++ b/Form.html
@@ -12,17 +12,17 @@
 <form>
     <p>
 <label> Enter Your Name:</label>
-  <input id="Name JS" name=“name” type=“text” size="25" required />
+  <input id="Name" name=“name” type=“text” size="25" required />
   </p>
 
   <p> Enter Your Gender:
-<input type="radio" name="Gender">Male
-<input type="radio" name="Gender">Female
+<input type="radio" name="Gender" required>Male
+<input type="radio" name="Gender" required>Female
 </p>
+I got this from Hamilitons lectures in week 4
 
 <p> Enter Date Of Birth:
   <select name="Days">
-   <option value="days"> Days</option>
    <option value="1"> 1</option>
    <option value="2"> 2</option>
    <option value="3"> 3</option>
@@ -43,17 +43,17 @@
    <option value="18"> 18</option>
    <option value="19"> 19</option>
    <option value="20"> 20</option>
-    <option value="21"> 21</option>
-     <option value="22"> 22</option>
-      <option value="23"> 23</option>
-       <option value="24"> 24</option>
-        <option value="25"> 25</option>
-         <option value="26"> 26</option>
-          <option value="27"> 27</option>
-           <option value="28"> 28</option>
-            <option value="29"> 29</option>
-             <option value="30"> 30</option>
-              <option value="31"> 31</option>
+   <option value="21"> 21</option>
+   <option value="22"> 22</option>
+   <option value="23"> 23</option>
+   <option value="24"> 24</option>
+   <option value="25"> 25</option>
+   <option value="26"> 26</option>
+   <option value="27"> 27</option>
+   <option value="28"> 28</option>
+   <option value="29"> 29</option>
+   <option value="30"> 30</option>
+   <option value="31"> 31</option>
 
   </select>
   <select name="Months">
@@ -87,23 +87,26 @@
     <option value="2011"> 2011</option>
   </select>
 </p>
+I got the code for select from w3schools and from Hamiliton
 
 <p> Enter Your Email:
-  <input name="Email" type="text">
+  <input name="Email" type="text" required>
 </p>
 
 <p> Enter Your Phone Number:
-  <input name="Phone Number" type="text">
+  <input name="Phone Number" type="text" required>
 </p>
 
-<input type="submit" value="Submit Form">
+
+<input type="submit" onclick="MyFunction()" value="Submit Form">
 <input type="reset" name="" value="Reset Form">
 </form>
 
-
 <script>
-document.getElementById("Submit Form").submit();
-document.getElementById("Reset Form").reset();
+function MyFunction();{
+  var txt;
+alert("Thank You")
+}
 </script>
 
 
