--- a/Form.html
+++ b/Form.html
@@ -98,14 +98,13 @@ I got the code for select from w3schools and from Hamiliton
 </p>
 
 
-<input type="submit" onclick="MyFunction()" value="Submit Form">
+<input type="button" onclick="MyFunction()" value="Submit Form">
 <input type="reset" name="" value="Reset Form">
 </form>
 
 <script>
-function MyFunction();{
-  var txt;
-alert("Thank You")
+function MyFunction(){
+document.getElementById('p1').innerHTML="Thank you";
 }
 </script>
 
