--- a/Form.html
+++ b/Form.html
@@ -32,7 +32,7 @@
   <input id="nameid" name=“name” type=“text” size="25" required />
   </p>
 
-  <p> Enter Your Gender: <!-- I got the code for radio and option from Hamilitons lectures in week 4 -->
+  <p> Enter Your Gender: <!-- I decided to use radio buttons, option lists and text boxes for my form -->
 <input type="radio" name="Gender" required>Male
 <input type="radio" name="Gender" required>Female
 </p>
