--- a/Form.html
+++ b/Form.html
@@ -119,8 +119,12 @@
 
 <p id="p1" > </p>
 </div>
+    
+ <!-- this JavaScript code is part of the valdiation of the form.
+ it sends a message to the user demanding him to fill in the form if he presses submit without filling in the form,
+  it will send a message stating "thank you" if you do fill in the form -->   
 
-<script>
+<script> 
 function MyFunction(){
 let name=document.getElementById('nameid').value;
 let phone=document.getElementById('phoneid').value;
