--- a/Form.html
+++ b/Form.html
@@ -2,10 +2,12 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/master.css">
     <title>Form Page </title>
   </head>
   <body>
-    
+
 <style>
     body{
       color: white;
@@ -119,12 +121,12 @@
 
 <p id="p1" > </p>
 </div>
-    
- <!-- this JavaScript code is part of the valdiation of the form.
- it sends a message to the user demanding him to fill in the form if he presses submit without filling in the form,
-  it will send a message stating "thank you" if you do fill in the form -->   
 
-<script> 
+<!-- this JavaScript code is part of the valdiation of the form.
+ it sends a message to the user demanding him to fill in the form if he presses submit without filling in the form,
+  it will send a message stating "thank you" if you do fill in the form -->
+
+<script>
 function MyFunction(){
 let name=document.getElementById('nameid').value;
 let phone=document.getElementById('phoneid').value;
