--- a/Form.html
+++ b/Form.html
@@ -30,14 +30,16 @@
 <div>
     <h1> Form </h1>
 
-    <a href="index.html"> Go Back To Index </a>
+    <!-- anchor tag back to the index -->
+<a href="index.html"> Go Back To Index </a>
 <form>
     <p>
 <label> Enter Your Name:</label>
   <input id="nameid" name=“name” type=“text” size="25" required />
   </p>
 
-  <p> Enter Your Gender: <!-- I decided to use radio buttons, option lists and text boxes for my form -->
+<!-- I decided to use radio buttons, option lists and text boxes for my form -->
+<p> Enter Your Gender:
 <input type="radio" name="Gender" required>Male
 <input type="radio" name="Gender" required>Female
 </p>
@@ -128,7 +130,6 @@
 <!-- this JavaScript code is part of the valdiation of the form.
  it sends a message to the user demanding him to fill in the form if he presses submit without filling in the form,
   it will send a message stating "thank you" if you do fill in the form -->
-
 <script>
 function MyFunction(){
 let name=document.getElementById('nameid').value;
