--- a/miniGame.html
+++ b/miniGame.html
@@ -53,9 +53,27 @@ text-align: center;
 
 </style>
 <!-- this is an internal css because i dont want the same changes as the other web pages when they chang scale -->
+    
+<link rel="stylesheet" href="css/master.css">
 
 <div class="gWrapper">
   <!-- this class and div is to style everthing inside this webpage and to also make it responsive -->
+  
+  <div class="title">
+
+        <img src="images/logo2.png" alt="title image and logo">
+        <h1><c1>Childrens</c1> <c2>Charities</c2> for <c1>Christmas</c1></h1>
+
+  </div>
+  
+  <div class="navbar">
+
+        <a href="index.html"><div class="links">Home</div></a>
+        <a href="Form.html"><div class="links">Join Us</div></a>
+        <a href="miniGame.html"><div class="links">Minigame</div></a>
+
+      </div>
+  
 <div class="users">
 
 <h3 class="gameHeader">Dice Game!!!</h3>
@@ -89,6 +107,10 @@ text-align: center;
   </button>
   <!-- this button is to change "player" username aka your username -->
 </div>
+  
+  <div class="footer">
+      CCChristmas&copy
+    </div>
 
 </div>
 
