--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Cinzel&display=swap" rel="stylesheet">
   </head>
 
-  <style> @import url('https://fonts.googleapis.com/css2?family=Cinzel&display=swap');
-  </style>
+
 
   <link rel="stylesheet" href="css/master.css">
 
@@ -44,7 +43,7 @@
         <!--divs were used here to make it easier to click the links-->
         <a href="index.html"><div class="links">Home</div></a>
         <a href="#"><div class="links">Join Us</div></a>
-        <a href="#"><div class="links">Minigame</div></a>
+        <a href="miniGame.html"><div class="links">Minigame</div></a>
 
       </div>
 
@@ -267,10 +266,12 @@
 
       </div>
 
-      <div class="footer">
-      CCChristmas&copy
+
+
     </div>
 
+    <div class="footer">
+      CCChristmas&copy
     </div>
 
   </body>
