--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
         <!--divs were used here to make it easier to click the links-->
         <a href="index.html"><div class="links">Home</div></a>
-        <a href="#"><div class="links">Join Us</div></a>
+        <a href="Form.html"><div class="links">Join Us</div></a>
         <a href="miniGame.html"><div class="links">Minigame</div></a>
 
       </div>
