--- a/miniGame.html
+++ b/miniGame.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
+<!-- this web page was made by Evan O'Neill student number:X22527456 -->
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>This Game</title>
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@500&display=swap" rel="stylesheet">
@@ -11,8 +13,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cinzel&display=swap" rel="stylesheet">
   </head>
-  <body>
-    <!-- this web page was made by Evan O'Neill student number:X22527456 -->
+  <body id="miniGame">
+
 <style>
 
 
