--- a/Form.html
+++ b/Form.html
@@ -49,7 +49,7 @@
 </p>
 
 
-<p> Enter Date Of Birth:
+  <p> <label>Enter Date Of Birth:</label>
   <select name="Days">
    <option value="1"> 1</option>
    <option value="2"> 2</option>
@@ -116,11 +116,11 @@
   </select>
 </p>
 
-<p> Enter Your Email:
+<p> <label>Enter Your Email:</label>
   <input id="emailid" name="Email" type="text" required>
 </p>
 
-<p> Enter Your Phone Number:
+<p> <label>Enter Your Phone Number:</label>
   <input id="phoneid" name="Phone Number" type="text" required>
 </p>
 
